load("@io_bazel_rules_go//go:def.bzl", "go_binary")

package(default_visibility = ["//visibility:public"])

exports_files(["LICENSE"])

go_binary(
    name = "localtoast",
    srcs = ["localtoast.go"],
    gc_linkopts = [
        "-s",
        "-w",
    ],
    deps = [
        "//library/proto:api_go_proto",
        "//localfilereader",
        "//scannercommon",
    ],
)

go_binary(
    name = "localtoast_mysql",
    srcs = ["localtoast_mysql.go"],
    gc_linkopts = [
        "-s",
        "-w",
    ],
    deps = [
        "//library/proto:api_go_proto",
        "//localfilereader",
        "//scannercommon",
        "//sqlquerier",
        "@com_github_go_sql_driver_mysql//:go_default_library",
    ],
)
