load("@io_bazel_rules_go//go:def.bzl", "go_embed_data", "go_test")

package(default_visibility = ["//visibility:public"])

exports_files(glob(["*/*.textproto"]))

filegroup(
    name = "cis_configs",
    srcs = glob(["*/*.textproto"]),
)

go_embed_data(
    name = "scan_configs_test",
    testonly = 1,
    srcs = ["//configs:cis_configs"],
    package = "configs_test",
    var = "scanConfigs",
)

go_test(
    name = "configs_test",
    size = "small",
    srcs = [
        "configs_test.go",
        ":scan_configs_test",
    ],
    deps = [
        "//scannerlib/proto:api_go_proto",
        "//scannerlib/proto:scan_instructions_go_proto",
        "@com_bitbucket_creachadair_stringset//:go_default_library",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@go_googleapis//grafeas/v1:grafeas_go_proto",
        "@org_golang_google_protobuf//encoding/prototext",
        "@org_golang_google_protobuf//testing/protocmp",
    ],
)
