load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "scannerlib",
    srcs = [
        "api_error_wrapper.go",
        "scanner.go",
        "version.go",
    ],
    importpath = "github.com/google/localtoast/scannerlib",
    deps = [
        "//scannerlib/configchecks",
        "//scannerlib/proto:api_go_proto",
        "//scannerlib/proto:compliance_go_proto",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "scannerlib_test",
    size = "small",
    srcs = ["scanner_test.go"],
    deps = [
        "//scannerlib",
        "//scannerlib/proto:api_go_proto",
        "//scannerlib/proto:compliance_go_proto",
        "//scannerlib/proto:scan_instructions_go_proto",
        "//scannerlib/testconfigcreator",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_google_go_cmp//cmp/cmpopts:go_default_library",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//testing/protocmp",
    ],
)
