load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

go_binary(
    name = "gen_reduced_configs",
    srcs = ["gen_reduced_configs.go"],
    deps = [":genreducedconfigs"],
)

go_library(
    name = "genreducedconfigs",
    srcs = ["gen_reduced_configs_lib.go"],
    importpath = "github.com/google/localtoast/configs/genreducedconfigs",
    deps = [
        "//protofilehandler",
        "//scannerlib/proto:api_go_proto",
    ],
)

go_test(
    name = "genreducedconfigs_test",
    size = "small",
    srcs = ["gen_reduced_configs_test.go"],
    deps = [
        ":genreducedconfigs",
        "//scannerlib/proto:api_go_proto",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@go_googleapis//grafeas/v1:grafeas_go_proto",
        "@org_golang_google_protobuf//encoding/prototext",
        "@org_golang_google_protobuf//testing/protocmp",
    ],
)
