load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "configchecks",
    srcs = [
        "check_common.go",
        "content_entry_file_check.go",
        "file_check.go",
        "group_criteria.go",
        "sql_check.go",
    ],
    importpath = "github.com/google/localtoast/scannerlib/configchecks",
    deps = [
        "//scannerlib/fileset",
        "//scannerlib/proto:api_go_proto",
        "//scannerlib/proto:compliance_go_proto",
        "//scannerlib/proto:scan_instructions_go_proto",
        "//scannerlib/repeatconfig",
        "@org_golang_google_protobuf//encoding/prototext",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "configchecks_test",
    size = "small",
    srcs = [
        "configchecks_test.go",
        "content_entry_file_check_test.go",
        "file_check_test.go",
        "group_criteria_test.go",
        "sql_check_test.go",
    ],
    deps = [
        ":configchecks",
        "//scannerlib/fileset",
        "//scannerlib/proto:api_go_proto",
        "//scannerlib/proto:compliance_go_proto",
        "//scannerlib/proto:scan_instructions_go_proto",
        "//scannerlib/testconfigcreator",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@org_golang_google_protobuf//testing/protocmp",
    ],
)
