load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "fileset",
    srcs = ["file_set.go"],
    importpath = "github.com/google/localtoast/scannerlib/fileset",
    deps = [
        "//scannerlib/proto:api_go_proto",
        "//scannerlib/proto:scan_instructions_go_proto",
        "@org_golang_google_protobuf//encoding/prototext",
    ],
)

go_test(
    name = "fileset_test",
    size = "small",
    srcs = ["file_set_test.go"],
    deps = [
        ":fileset",
        "//scannerlib/proto:api_go_proto",
        "//scannerlib/proto:scan_instructions_go_proto",
        "@com_github_google_go_cmp//cmp:go_default_library",
    ],
)
