load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "api_proto",
    srcs = ["api.proto"],
    deps = [
        ":compliance_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "api_go_proto",
    importpath = "github.com/google/localtoast/scannerlib/proto/api_go_proto",
    protos = [":api_proto"],
    deps = ["//scannerlib/proto:compliance_go_proto"],
)

proto_library(
    name = "scan_instructions_proto",
    srcs = ["scan_instructions.proto"],
)

go_proto_library(
    name = "scan_instructions_go_proto",
    importpath = "github.com/google/localtoast/scannerlib/proto/scan_instructions_go_proto",
    protos = [":scan_instructions_proto"],
)

proto_library(
    name = "compliance_proto",
    srcs = ["compliance.proto"],
)

go_proto_library(
    name = "compliance_go_proto",
    importpath = "github.com/google/localtoast/scannerlib/proto/compliance_go_proto",
    protos = [":compliance_proto"],
)
