load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "repeatconfig",
    srcs = ["repeat_config.go"],
    importpath = "github.com/google/localtoast/scannerlib/repeatconfig",
    deps = [
        "//scannerlib/proto:scan_instructions_go_proto",
        "@org_golang_google_protobuf//proto",
    ],
)

go_test(
    name = "repeatconfig_test",
    size = "small",
    srcs = [
        "repeat_config_test.go",
    ],
    deps = [
        ":repeatconfig",
        "//scannerlib/proto:scan_instructions_go_proto",
        "@com_github_google_go_cmp//cmp:go_default_library",
        "@com_github_google_go_cmp//cmp/cmpopts:go_default_library",
        "@org_golang_google_protobuf//testing/protocmp",
    ],
)
