load("@io_bazel_rules_go//go:def.bzl", "go_library")

package(default_visibility = ["//visibility:public"])

go_library(
    name = "testconfigcreator",
    testonly = 1,
    srcs = ["test_config_creator.go"],
    importpath = "github.com/google/localtoast/scannerlib/testconfigcreator",
    deps = [
        "//scannerlib/proto:api_go_proto",
        "//scannerlib/proto:compliance_go_proto",
        "//scannerlib/proto:scan_instructions_go_proto",
        "@org_golang_google_protobuf//encoding/prototext",
    ],
)
